# LLMTrace

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  harness.py  ingestion.py  metrics.py  settings.py
backend/app/core/: config.py  ids.py  redaction.py  runtime_config.py  safe_logging.py  security.py  time.py
backend/app/db/: models.py  session.py
backend/app/harness/: schemas.py
backend/app/ingestion/: client.py  dlq.py  publisher.py  schemas.py  worker.py
backend/app/llm/: client.py
backend/app/llm/providers/: anthropic.py  base.py  mock.py  openai.py
backend/app/metrics/: queries.py
backend/llmtrace_sdk/: README.md  __init__.py  client.py
backend/migrations/: env.py
backend/migrations/versions/: 20260525_0001_initial_schema.py  20260525_0002_harness_observability.py  20260525_0003_runtime_settings.py  20260525_0004_conversation_checkpoints.py  20260525_0005_context_memory.py
backend/tests/: conftest.py  test_chat_storage.py  test_harness.py  test_ingestion.py  test_ingestion_security.py  test_llmtrace_sdk.py  test_real_providers.py  test_redaction.py  test_runtime_settings.py
deploy/k8s/: README.md  backend.yaml  configmap.yaml  frontend.yaml  hpa.yaml  (+6 more)
docs/: architecture.md  decisions.md  schema.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: capture-demo.sh  docker-smoke.sh
(+22 files in other folders)
