[project]
name = "llmtrace-backend"
version = "0.1.0"
description = "FastAPI backend for LLM inference logging and ingestion."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "anthropic>=0.40.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.55.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "llmtrace_sdk*"]
